# Cubing

./: .gitignore  CMakeLists.txt  IO_Game_interface.h  main.cpp
libs/: CMakeLists.txt  ft2build.h
libs/GLAD/: CMakeLists.txt
libs/GLFW/lib/: glfw3.lib
libs/freetype_libs/: freetype.lib  freetyped.lib
src/: IO_Game_interface.h  InputData.h  Updates.h  ubiq.h
src/IO/: CMakeLists.txt  glfwCallbacks.cpp  glfwCallbacks.h  init.cpp  window.h
src/Render/: CMakeLists.txt  CubeRender.cpp  CubeRender.h  FontInit.cpp  FontInit.h  FontRender.cpp  FontRender.h  Init.cpp  Update.cpp  init.h
src/Render/Shaders/: cube.frag  cube.vert  font.frag  font.vert
src/Toolbox/: CMakelists.txt  Shaders.cpp  Shaders.h
